# ane.cpp

./: .gitignore  CMakeLists.txt  README.md  generate.cpp  generate.h  main.cpp  program.md  utils.cpp  utils.h
bench/: energy_bench.py
bench/results/: compare_20260401_143330.json  compare_20260401_211247.json  compare_20260401_213018.json  energy_20260401_141017.json  sustained_20260401_142617.json  sustained_ane_20260402_024547.json  sustained_ane_20260402_075037.json  sustained_llama_20260402_030336.json  sustained_llama_20260402_074422.json  sustained_llama_20260402_075457.json  sustained_llama_20260402_083232.json  sustained_llama_20260402_083804.json
core/: ane_runtime.cpp  ane_runtime.h  cpu_ops.cpp  kernels.metal  metal_gemm.h  metal_gemm.mm  model_loader.cpp  model_loader.h  safetensors.cpp  safetensors.h  sampling.cpp  sampling.h  weight_cache.cpp  weight_cache.h
models/llm/: qwen3.cpp  qwen3.h  qwen3_5.cpp  qwen3_5.h
scripts/: benchmark_parallel.py  energy_benchmark.sh
